objects/BLN_Reg_Main_Template__c.object
<CustomObject>
    <fields>
        <fullName>BLN_Events__c</fullName>
        <label>BLN Events</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipLabel>BLN_Reg_Main_Templates</relationshipLabel>
        <relationshipName>BLN_Reg_Main_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InUse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InUse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Theme_Name__c</fullName>
        <label>Theme Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>structure_type__c</fullName>
        <label>structure type</label>
        <picklist>
            <picklistValues>
                <fullName>Welcome Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Page</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>BLN_Reg_Main_Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BLN_Events__c</columns>
        <columns>InUse__c</columns>
        <columns>structure_type__c</columns>
        <columns>Theme_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RegTmp-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN_Reg_Main_Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>